test/files/pos/t5031_3/package.scala
package foo

package object bar {
  type Foo = Int => String
}

