test/files/neg/t9040.scala
object Foo {
  type Alias = {
    // def m: Alias
  }
  def foo {
    type LocalAlias = {
      def m: LocalAlias
    }
  }
}
